# unr_tools_02

./: .gitignore  ATENCION!!!.txt  app.py  mega_nz.py  pyproject.toml
DB/Firebase/: Firestore2lista.py  metadatos2fb.py  metadatos2fb.xlsx
DB/SQL/: .env  db.py  log_Mega.py  main.py  models.py
Doc/: UNR_Mega.vpp
scratch/: clase_lista_files.py  lista_files.py
